# storage/api-docs/api-docs.json
@@ -178,6 +178,43 @@
                 ]
             }
         },
+        "/api/categories/{id}/children": {
+            "get": {
+                "tags": [
+                    "Categories"
+                ],
+                "summary": "Получение дочерних категорий",
+                "description": "Получение дочерних категорий",
+                "operationId": "children",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID категории",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "403": {
+                        "description": "Нет доступа к этому методу"
+                    },
+                    "422": {
+                        "description": "Неправильные входные данные"
+                    }
+                },
+                "security": [
+                    {
+                        "api_key": []
+                    }
+                ]
+            }
+        },
         "/api/products/{id}": {
             "get": {
                 "tags": [
@@ -188,7 +225,7 @@
                 "operationId": "show",
                 "parameters": [
                     {
-                        "name": "product_id",
+                        "name": "id",
                         "in": "path",
                         "description": "ID of product to return",
                         "required": true,
